<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>Automation</groupId>
	<artifactId>AutomationBase</artifactId>
	<version>0.0.1</version>
	<packaging>jar</packaging>
	<name>AutomatoinBase</name>

	<properties>
		<!-- Properties section -->
		<aspectj.version>1.8.10</aspectj.version>
		<cucumber.version>1.2.5</cucumber.version>
		<allure.cucumber.version>2.0-BETA6</allure.cucumber.version>
		<cucumber.junit.version>1.2.5</cucumber.junit.version>
		<junit.version>4.13.1</junit.version>
		<selenium.java.version>3.4.0</selenium.java.version>
		<selenium.server.version>3.4.0</selenium.server.version>
		<guava.version>21.0</guava.version>
		<maven-compiler-plugin>3.2</maven-compiler-plugin>
		<maven-surefire-plugin>2.20</maven-surefire-plugin>
		<allure-maven>2.8</allure-maven>
		<allure.reportVersion>2.3.1</allure.reportVersion>
		<org.apache.commons.version>3.4</org.apache.commons.version>
	</properties>

	<dependencies>

		<!-- Apache string utils -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>${org.apache.commons.version}</version>
		</dependency>

		<dependency>
			<!-- allure report dependencies -->
			<groupId>io.qameta.allure</groupId>
			<artifactId>allure-cucumber-jvm</artifactId>
			<version>${allure.cucumber.version}</version>
		</dependency>

		<!-- Cucumber dependencies -->
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-java</artifactId>
			<version>${cucumber.version}</version>
		</dependency>

		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-junit</artifactId>
			<version>${cucumber.junit.version}</version>
		</dependency>

		<!--CSV parser -->
		<dependency>
			<groupId>com.opencsv</groupId>
			<artifactId>opencsv</artifactId>
			<version>4.0</version>
		</dependency>

		<!-- Junit dependencies -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<!-- <scope>test</scope> -->
		</dependency>

		<!-- Selenium-webdriver dependencies -->
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>${selenium.java.version}</version>
		</dependency>

		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-server</artifactId>
			<version>${selenium.server.version}</version>
		</dependency>

		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>${guava.version}</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin}</version>
				<configuration>
					<encoding>UTF-8</encoding>
					<source>1.7</source>
					<target>1.7</target>
					<compilerArgument>-Werror</compilerArgument>

					<systemPropertyVariables>
						<property>
							<name>browser</name>
							<value>${browser}</value>
						</property>
						<property>
							<name>cloud_config</name>
							<value>${cloud_config}</value>
						</property>
					</systemPropertyVariables>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven-surefire-plugin}</version>
				<configuration>
					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
					<!-- <systemPropertyVariables> <allure.results.directory>target/allure-results</allure.results.directory> 
						<outputDirectory>target/allure-results</outputDirectory> </systemPropertyVariables> -->
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.aspectj</groupId>
						<artifactId>aspectjweaver</artifactId>
						<version>${aspectj.version}</version>
					</dependency>
				</dependencies>
			</plugin>

			<plugin>
				<groupId>io.qameta.allure</groupId>
				<artifactId>allure-maven</artifactId>
				<version>${allure-maven}</version>
				<configuration>
					<reportVersion>${allure.reportVersion}</reportVersion>
				</configuration>
			</plugin>

		</plugins>
	</build>
</project>
